RESOLVED FIXED10956
REGRESSION: Gradient-stroked Text no longer works
https://bugs.webkit.org/show_bug.cgi?id=10956
Summary REGRESSION: Gradient-stroked Text no longer works
Eric Seidel (no email)
Reported 2006-09-20 15:46:40 PDT
I'm not sure when this happened, but it must have been in the last few weeks. Gradient-stroked text, such as is found in: W3C-SVG-1.1/pservers-grad-08-b W3C-SVG-1.1/pservers-grad-11-b no longer works. It used to. Marking this as only a P2 since we've never shipped SVG.
Attachments
Initial patch (143.24 KB, patch)
2006-12-17 13:25 PST, Nikolas Zimmermann
eric: review+
Nikolas Zimmermann
Comment 1 2006-12-17 12:47:50 PST
It took a good hour, but I could finally track down to the range: 16288 (broken) - 16284 (working) Only 16286 is svg related: http://trac.webkit.org/projects/webkit/changeset/16286 Starting to investigate.
Nikolas Zimmermann
Comment 2 2006-12-17 13:25:08 PST
Created attachment 11896 [details] Initial patch Fix gradient on stroke of text. Radial & linear gradients both work properly now.
Eric Seidel (no email)
Comment 3 2006-12-17 13:37:02 PST
Comment on attachment 11896 [details] Initial patch Looks fine. You can remove the outdated comment about pen vs. fill/stroke, or update it to explain why we need to set both fill & stroke.
Nikolas Zimmermann
Comment 4 2006-12-17 13:45:37 PST
Landed in r18271.
Note You need to log in before you can comment on or make changes to this bug.