Reviewed by Eric.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=10956

Long standing regression. The old code in FontMac.mm, used set the fill/stroke
color "[nsColor(graphicsContext->pen().color()) set];", and current code only
sets the fill color. Reverting to old behaviour fixes gradient-on-stroke-of-text.


Canonical link: https://commits.webkit.org/15341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18271 268f45cc-cd09-0410-ab3c-d52691b4dbfc