WebCore/platform/graphics/svg/cg/SVGPaintServerGradientCg.cpp
@@ -240,6 +240,8 @@ bool SVGPaintServerGradient::setup(GraphicsContext*& context, const RenderObject
     if (listener()) // this seems like bad design to me, should be in a common baseclass. -- ecs 8/6/05
         listener()->resourceNotification();
 
+    m_maskImage = 0;
+
     // FIXME: total const HACK!
     // We need a hook to call this when the gradient gets updated, before drawn.
     if (!m_shadingCache)
